# Invictos

./: .breakpoints  .gitignore  .replit  apptodo.db  pyproject.toml
.upm/: store.json
EntregaFinal_todo-List/: app.js  index.html  style.css
backend/: server.py
frontend/: README.md  client_secret_109860436743-tksfvja7oh8kv9mi4il114ai9ql0cd08.apps.googleusercontent.com.json  package-lock.json  package.json  tailwind.config.js
frontend/components/: Button.js  Introduction.js  Page.js
frontend/contexts/: Introduction.js
frontend/pages/: _app.js  index.js
frontend/pages/api/auth/: [...nextauth].js
frontend/styles/: output.css
