[tool.poetry]
name = "repl_python3_Invictos"
version = "0.1.0"
description = ""
authors = ["DaniloMatrangol <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
